2003-04-23  James Henstridge  <james@daa.com.au>

	* jhbuild.py (do_update_one): add "jhbuild updateone" command
	(suggested by bug #109617).

	* modulesets/gnome24.modules: add evolution to this moduleset too.

	* modulesets/moduleset.xsl: update this too.

	* modulesets/moduleset.dtd: remove fcpackage element from DTD.

	* module.py (FcPackage): remove specialised fcpackage build rules.
	(read_module_set): get rid of parsing of <fcpackage> tags.

	* modulesets/gnome22.modules: same here, but use the fc-2_2_branch
	branch of fontconfig.

	* modulesets/gnome24.modules: get fontconfig,etc from CVS.

2003-04-22  James Henstridge  <james@daa.com.au>

	* modulesets/gnome1.modules: same here.

	* modulesets/gnome24.modules: same here.

	* modulesets/gnome22.modules: same here.

	* modulesets/gnome20.modules: add cvs roots.

	* jhbuild.py (*): fix up arguments to read_module_set.

	* module.py (read_module_set): read a set of cvsroots from the XML
	file that can be overriden from the jhbuildrc file.

	* cvs.py (login): new function to perform a cvs checkout

	* jhbuild.py (read_config_file): we now have a "cvsroots"
	dictionary, mapping keys to cvs roots.

2003-04-21  James Henstridge  <james@daa.com.au>

	* cvs.py (_scramble, _descramble): add functions to scramble and
	descramble CVS passwords.  Will be used to work around "cvs login"
	needing user input.

	* libtool-1.3.5-mktemp.patch: update to latest version from RH
	packages, fixing a bug pointed out by Jeff.

	* bootstrap.py (bootstraps): move up to libtool-1.5, which is
	required to build fontconfig, etc from CVS.  Also add RH's
	ltmain-SED patch that patches over problems when people use old
	libtool.m4 with new ltmain.sh.

2003-04-21  Jens Finke  <jens@triq.net>

	* modulesets/gnome24.modules:
	* modulesets/gnome22.modules: Added eel dep for eog.

2003-04-21  Jon Svendsen  <jon-sven@frisurf.no>

	* modulesets/gnome20.modules: 
	* modulesets/gnome22.modules: 