@@ -19,3 +19,4 @@ autogenargs='--enable-maintainer-mode --disable-static --disable-gtk-doc'
 
 installprog = os.path.join(os.environ['HOME'], 'bin', 'install-check')
 
+branches['libglade'] = 'libglade-gobject-support-branch'
